--- a/views/area.xml
+++ b/views/area.xml
@@ -1,15 +1,16 @@
 <odoo>
+
     <record model="ir.ui.view" id="area_form_view">
         <field name="name">area.form</field>
-        <field name="model">npi.area</field>
+        <field name="model">recu.area</field>
         <field name="arch" type="xml">
             <form string="Area Form">
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="extension"/>
-                        <field name="naturalPark_id"/>
-                        <field name="ca_id"/>
+                        <field name="natural_park_id"/>
+                        <field name="community_id"/>
                     </group>
                 </sheet>
             </form>
@@ -18,26 +19,27 @@
 
     <record model="ir.ui.view" id="area_tree_view">
         <field name="name">area.tree</field>
-        <field name="model">npi.area</field>
+        <field name="model">recu.area</field>
         <field name="arch" type="xml">
             <tree string="Area Tree">
                 <field name="name"/>
                 <field name="extension"/>
-                <field name="naturalPark_id"/>
-                <field name="ca_id"/>
+                <field name="natural_park_id"/>
+                <field name="community_id"/>
             </tree>
         </field>
     </record>
 
     <record model="ir.actions.act_window" id="area_list_action">
         <field name="name">Area</field>
-            <field name="res_model">npi.area</field>
-            <field name="view_mode">tree,form</field>
-            <field name="help" type="html">
-                <p class="o_view_nocontent_smiling_face">Insert an area</p>
-            </field>
+        <field name="res_model">recu.area</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">Insertar una area</p>
+        </field>
     </record>
 
-    <menuitem id="area_menu" name="Area" parent="npi_menu" action="area_list_action"/>
 
-</odoo>
+    <menuitem id="area_menu" name="Area" parent="recu_menu" action="area_list_action"/>
+
+</odoo> 
