--- a/views/visitor.xml
+++ b/views/visitor.xml
@@ -1,49 +1,34 @@
 <odoo>
+
     <record model="ir.ui.view" id="visitor_form_view">
         <field name="name">visitor.form</field>
-        <field name="model">npi.visitor</field>
+        <field name="model">recu.visitor</field>
         <field name="arch" type="xml">
-            <form string="Visitor Form">
+            <form string="visitor Form">
                 <sheet>
                     <group>
                         <field name="dni"/>
                         <field name="name"/>
-                        <field name="adress"/>
-                        <field name="job"/>
-                        <field name="naturalPark_id"/>
-                        <field name="managment_id"/>
-                        <field name="hostel_id"/>
+                        <field name="address"/>
+                        <field name="work"/>
+                        <field name="management_id"/>
+                        <field name="acommodation_id"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <record model="ir.ui.view" id="visitor_tree_view">
-        <field name="name">visitor.tree</field>
-        <field name="model">npi.visitor</field>
-        <field name="arch" type="xml">
-            <tree string="Visitor Tree">
-                <field name="dni"/>
-                <field name="name"/>
-                <field name="adress"/>
-                <field name="job"/>
-                <field name="naturalPark_id"/>
-                <field name="managment_id"/>
-                <field name="hostel_id"/>
-            </tree>
-        </field>
-    </record>
-
     <record model="ir.actions.act_window" id="visitor_list_action">
         <field name="name">Visitor</field>
-        <field name="res_model">npi.visitor</field>
+        <field name="res_model">recu.visitor</field>
         <field name="view_mode">tree,form</field>
         <field name="help" type="html">
-        <p class="o_view_nocontent_smiling_face">Insert visitor</p>
+        <p class="o_view_nocontent_smiling_face">Insertar visitante</p>
         </field>
     </record>
 
 
-    <menuitem id="visitor_menu" name="Visitor" parent="npi_menu" action="visitor_list_action"/>
-</odoo>
+    <menuitem id="visitor_menu" name="Visitor" parent="recu_menu" action="visitor_list_action"/>
+
+</odoo> 
